--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -38,7 +38,6 @@
 }
 
 .content_wrapper {
-    height: 100vh; // Show vertical scroll bar.
     overflow-x: hidden; // Hide horizontal scroll bar.
 }
 
